# SalvageMap

./: .gitignore  README.md  pyproject.toml  run-salvagemap-root.sh  run-salvagemap.sh
.github/workflows/: release.yml
app/: __init__.py  main.py
app/core/: config.py  ddrescue_runner.py  domain.py  mapfile.py  partition.py  recovery.py  terminal.py  tree_export.py  tree_status.py  volume.py
app/ext/: __init__.py  catalog.py  dirent.py  extents.py  group_desc.py  inode.py  plan.py  superblock.py
app/hfsplus/: __init__.py  btree.py  catalog.py  extents.py  plan.py  volume_header.py
app/ntfs/: boot_sector.py  filetree.py  mft.py  partition.py  plan.py  runlist.py  targeted_recovery.py
app/ui/: ddrescue_view.py  device_dialog.py  file_tree_panel.py  html_export_dialog.py  import_logfile_dialog.py  log_panel.py  main_window.py  output_dialog.py  partition_dialog.py  phase_checklist.py  sector_map.py  sector_map_window.py  settings_dialog.py  status_panel.py  theme.py
packaging/: build-deb.sh
packaging/deb/: control.in  copyright  postinst  postrm  salvagemap  salvagemap-pkexec  salvagemap.desktop
tests/: test_config.py  test_domain.py  test_ext.py  test_ext_detect.py  test_filedata.py  test_filetree.py  test_hfsplus.py  test_mapfile.py  test_mapfile_guard.py  test_mft.py  test_partition.py  test_phase_checklist.py  test_prioritize.py  test_robustness.py  test_runlist.py  test_runner.py  test_terminal.py  test_tree_export.py  test_unaligned_retry.py
tests/sample/: sample.map
