[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "salvagemap"
version = "0.1.2"
description = "GUI wrapper over GNU ddrescue with a live sector map and NTFS-targeted recovery"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Recovery Tools",
]
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
salvagemap = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
